--- a/docker-bash/Dockerfile
+++ b/docker-bash/Dockerfile
@@ -3,7 +3,9 @@ FROM debian:stable-slim
 
 # Устанавливаем необходимые пакеты
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y cron && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        cron \
+        tzdata && \
     ln -sf /usr/share/zoneinfo/Europe/Moscow /etc/localtime && \
     echo "Europe/Moscow" > /etc/timezone && \
     dpkg-reconfigure -f noninteractive tzdata && \
@@ -12,8 +14,10 @@ RUN apt-get update && \
 
 # Создаем Cron
 COPY cronfile /etc/cron.d/
-# Даем правильные права на cronfile
-# RUN chmod 0644 /etc/cron.d/cronfile
+# Устанавливаем права и проверяем валидность cron-задания
+# RUN chmod +x /app/script.sh && \
+    # chmod 0644 /etc/cron.d/cronfile && \
+    # crontab -u root /etc/cron.d/cronfile
 
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app
