--- a/docker-python/Dockerfile
+++ b/docker-python/Dockerfile
@@ -3,7 +3,9 @@ FROM python:slim
 
 # Устанавливаем пакеты
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y cron && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        cron \
+        tzdata && \
     ln -sf /usr/share/zoneinfo/Europe/Moscow /etc/localtime && \
     echo "Europe/Moscow" > /etc/timezone && \
     dpkg-reconfigure -f noninteractive tzdata && \
@@ -11,13 +13,16 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Создаем Cron
-COPY cronfile /etc/cron.d/cronfile
-# Даем правильные права на cronfile
-# RUN chmod 0644 /etc/cron.d/cronfile
+COPY cronfile /etc/cron.d/
+
+# Устанавливаем права и проверяем валидность cron-задания
+# RUN chmod +x /app/script.sh && \
+    # chmod 0644 /etc/cron.d/cronfile && \
+    # crontab -u root /etc/cron.d/cronfile
 
 # Устанавливаем переменные окружения
 ENV PYTHONDONTWRITEBYTECODE=1 \
-PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1
 
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app
