--- a/docker-django-cron/docker-compose.yml
+++ b/docker-django-cron/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   django-app:
     build: .
-    image: django-image
-    container_name: django-container
+    # image: django-image
+    # container_name: django-container
     restart: always
     command: "gunicorn root.wsgi:application --bind='0.0.0.0:8000'"
     env_file:
